cli/tests/testdata/test/fail_fast.out
Check [WILDCARD]/test/fail_fast.ts
running 10 tests from ./test/fail_fast.ts
test 1 ... FAILED ([WILDCARD])

failures:

test 1 => ./test/fail_fast.ts:[WILDCARD]
error: Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail_fast.ts:2:9

failures:

test 1 => ./test/fail_fast.ts:[WILDCARD]

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Test failed
